--- a/MDK-ARM/rake_main_board_controller/rake_main_board_controller.build_log.htm
+++ b/MDK-ARM/rake_main_board_controller/rake_main_board_controller.build_log.htm
@@ -21,13 +21,22 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.0.7.0
 Dialog DLL:      TCM.DLL V1.36.5.0
  
 <h2>Project:</h2>
-D:\projeler\rake_main_board_controller\MDK-ARM\rake_main_board_controller.uvprojx
+D:\Github\rake_main_board_controller\MDK-ARM\rake_main_board_controller.uvprojx
 Project File Date:  02/13/2021
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'D:\Kail\ARM\ARMCC\Bin'
 Build target 'rake_main_board_controller'
-"rake_main_board_controller\rake_main_board_controller.axf" - 0 Error(s), 0 Warning(s).
+compiling main.c...
+../Src/main.c(345): warning:  #167-D: argument of type "unsigned char *" is incompatible with parameter of type "char *restrict"
+  		motor1_uart.txBufferLen = sprintf(motor1_uart.txBuffer, "S%d%d%d%dCF",
+../Src/main.c(354): warning:  #167-D: argument of type "unsigned char *" is incompatible with parameter of type "char *restrict"
+  		motor2_uart.txBufferLen = sprintf(motor2_uart.txBuffer, "S%d%d%d%dCF",
+../Src/main.c: 2 warnings, 0 errors
+linking...
+Program Size: Code=7340 RO-data=448 RW-data=36 ZI-data=1516  
+FromELF: creating hex file...
+"rake_main_board_controller\rake_main_board_controller.axf" - 0 Error(s), 2 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -50,7 +59,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.3.0
-Build Time Elapsed:  00:00:00
+Build Time Elapsed:  00:00:02
 </pre>
 </body>
 </html>
