--- a/MDK-ARM/rake_main_board_controller/rake_main_board_controller.build_log.htm
+++ b/MDK-ARM/rake_main_board_controller/rake_main_board_controller.build_log.htm
@@ -22,21 +22,29 @@ Dialog DLL:      TCM.DLL V1.36.5.0
  
 <h2>Project:</h2>
 D:\Github\rake_main_board_controller\MDK-ARM\rake_main_board_controller.uvprojx
-Project File Date:  02/13/2021
+Project File Date:  02/16/2021
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'D:\Kail\ARM\ARMCC\Bin'
 Build target 'rake_main_board_controller'
 compiling main.c...
-../Src/main.c(345): warning:  #167-D: argument of type "unsigned char *" is incompatible with parameter of type "char *restrict"
+../Src/main.c(230): warning:  #167-D: argument of type "unsigned char *" is incompatible with parameter of type "char *restrict"
   		motor1_uart.txBufferLen = sprintf(motor1_uart.txBuffer, "S%d%d%d%dCF",
-../Src/main.c(354): warning:  #167-D: argument of type "unsigned char *" is incompatible with parameter of type "char *restrict"
+../Src/main.c(239): warning:  #167-D: argument of type "unsigned char *" is incompatible with parameter of type "char *restrict"
   		motor2_uart.txBufferLen = sprintf(motor2_uart.txBuffer, "S%d%d%d%dCF",
-../Src/main.c: 2 warnings, 0 errors
+../Src/main.c(261): warning:  #167-D: argument of type "unsigned char *" is incompatible with parameter of type "char *restrict"
+  		strcat(motor1_uart.rxBuffer, motor2_uart.rxBuffer);
+../Src/main.c(261): warning:  #167-D: argument of type "unsigned char *" is incompatible with parameter of type "const char *restrict"
+  		strcat(motor1_uart.rxBuffer, motor2_uart.rxBuffer);
+../Src/main.c(267): warning:  #167-D: argument of type "unsigned char *" is incompatible with parameter of type "char *restrict"
+      strcpy(&motor1_uart.rxBuffer[10], &motor1_uart.rxBuffer[10 + 1]);
+../Src/main.c(267): warning:  #167-D: argument of type "unsigned char *" is incompatible with parameter of type "const char *restrict"
+      strcpy(&motor1_uart.rxBuffer[10], &motor1_uart.rxBuffer[10 + 1]);
+../Src/main.c: 6 warnings, 0 errors
 linking...
-Program Size: Code=7340 RO-data=448 RW-data=36 ZI-data=1516  
+Program Size: Code=7484 RO-data=448 RW-data=36 ZI-data=1516  
 FromELF: creating hex file...
-"rake_main_board_controller\rake_main_board_controller.axf" - 0 Error(s), 2 Warning(s).
+"rake_main_board_controller\rake_main_board_controller.axf" - 0 Error(s), 6 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -59,7 +67,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.3.0
-Build Time Elapsed:  00:00:02
+Build Time Elapsed:  00:00:04
 </pre>
 </body>
 </html>
